# personal-site

./: .dockerignore  .gitignore  Dockerfile  README.md
api/: Cargo.toml
api/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.vite-config.json  vite.config.ts  vue.config.js
frontend/src/: App.vue  index.css  main.ts
frontend/src/assets/: base.css
frontend/src/constants/: imageData.ts
frontend/src/css/: carousel.css  projects.css
frontend/src/router/: index.ts  routes.ts
frontend/src/styles/: index.css
frontend/src/types/: fullpage.d.ts
frontend/src/views/: About.vue  Contact.vue  Home.vue  Photography.vue  Project.vue
